frontend/static/css/table.css
table {
    width: 90%;
    height: 90vh;
    margin-top: 5vh;
    margin-bottom: 5vh;
    table-layout: fixed;
    position: absolute;
    z-index: 0;
}

tbody{
    display: table;
    width: 100%;
    height: 100%;
}

button{
    margin-left: 5%;
    margin-right: 5%;
}

th{
    height: 10%;
}

td{
    text-align: left;
    vertical-align: initial;
    text-indent: 2%;
    font-weight: bold;
    width: calc(90%/7);
    height: calc(90%/7);
    max-width: calc(90vw/7);
    max-height: calc(90%/7);

}

